tests/integration/snapshots/integration__tui_test__branding_logo_full.snap
---
source: tests/unit/tui_test.rs
assertion_line: 209
expression: logo
---
 █████╗  ██████╗ ██████╗
██╔══██╗██╔════╝ ██╔══██╗
███████║██║  ███╗██████╔╝
██╔══██║██║   ██║██╔══██╗
██║  ██║╚██████╔╝██║  ██║
╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝
 ⏺ REC ──────────────────
