tests/integration/snapshots/integration__tui_test__colorize_help_commands.snap
---
source: tests/unit/tui_test.rs
assertion_line: 238
expression: output
---

Commands:
  record   [37mStart recording a session[0m
  status   [37mShow storage statistics[0m
  cleanup  [37mInteractive cleanup of old sessions[0m
  list     [37mList recorded sessions [aliases: ls][0m
  analyze  [37mAnalyze a recording with AI[0m
