tests/integration/snapshots/integration__tui_test__static_logo_width_40.snap
---
source: tests/unit/tui_test.rs
assertion_line: 294
expression: output
---

 █████╗  ██████╗ ██████╗
██╔══██╗██╔════╝ ██╔══██╗
███████║██║  ███╗██████╔╝
██╔══██║██║   ██║██╔══██╗
██║  ██║╚██████╔╝██║  ██║
╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝
 ⏺ REC ─────────────────────────────────
